changed title and menu button

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Dashboard</title>
-		<link rel="stylesheet" href="dashboardStyle.css">
+		<link rel="stylesheet" href="css/dashboardStyle.css">
 	</head>
 	<body>
 		<div>
