--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div id="titleDiv">
-			<h1>Title</h1>
+			<h1>Activ8</h1>
 			<img src="images/logoPlaceholder.png">
 		</div>
 
