uploaded and changed logo

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 	<body>
 		<div id="titleDiv">
 			<h1>Activ8</h1>
-			<img src="images/logoPlaceholder.png">
+			<img src="images/activ8logo.png">
 		</div>
 
 		<div id="loginDiv">
