created workout page, workout CSS page

--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
 		<div>
 			<h1 id="greetingMsg">Welcome to the Dashboard !</h1>
 		</div>
-		<img id="menuBtn" src="images/menuIcon.png" >
+		<img id="menuBtn" src="images/menuButt.png" >
 	</body>
 	<script>
 		const username = sessionStorage.getItem('username');
