workout search functionality

--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 		<div id="newsDiv">
 			<h4>Patch Notes</h4>
 			<p>
-				↳ V 2.5.13 Fixed the dashboard calendar not adjusting for leap days <br>
+				↳ V 2.5.13 Fixed the dashboard calendar to adjust for leap days <br>
 				↳ V 2.5.12 Made the font on the meal page easier to read
 			</p>
 		</div>
