--- a/workout.html
+++ b/workout.html
@@ -35,6 +35,24 @@
         <div id= "exerciseSearch" class="exerciseSearch">
         </div>
 
+        <div class="resistanceFields">
+            
+            <!-- <input
+                type="text"
+                id="reps"
+                placeholder="reps"
+            > -->
+        </div>
+        <!-- <div class="setsLine"> -->
+            <!-- <input
+                type="text"
+                id="reps"
+                placeholder="reps"
+            > -->
+
+        <!-- </div> -->
+        
+
 
         <!-- <div class="menuBtn">
             <img src="images/menuButt.png" >
@@ -61,7 +79,8 @@
 
   const exerciseInput = document.getElementById('searchInput');
   const exerciseSearch = document.getElementById('exerciseSearch');
-  
+  const resistanceFields = document.querySelector('.resistanceFields');
+
   // Clear placeholder when user clicks on the box (focus)
   exerciseInput.addEventListener('focus', () => {
     exerciseInput.placeholder = '';
@@ -82,7 +101,7 @@
   exerciseInput.addEventListener('input', () => {
     const query = exerciseInput.value.toLowerCase().trim();
 
-    // If empty, results box
+    // If empty search bar, close results box
     if (query === '') {
       exerciseSearch.style.display = 'none';
       exerciseSearch.innerHTML = '';
@@ -107,11 +126,40 @@
         const div = document.createElement('div');
         div.classList.add('exerciseResult');
         div.textContent = `${ex.name} (${ex.type})`;
+
+        // When user clicks on an exercise, collapse search
+        div.addEventListener('click', () => {
+          addExerciseBox(ex.name);
+          exerciseInput.value = ''; // clear search bar
+          exerciseSearch.innerHTML = ''; // hide results
+          exerciseSearch.style.display = 'none';
+        });
+
         exerciseSearch.appendChild(div);
       });
     }
-    // Always show box when displaying results
     exerciseSearch.style.display = 'block';
+  }
+
+  //  Function to create exercise box under search
+  function addExerciseBox(exerciseName) {
+  const wrapper = document.createElement('div');
+  wrapper.classList.add('exerciseWrapper'); // contains the box + reps label
+
+  const div = document.createElement('div');
+  div.classList.add('exerciseBox');
+  div.setAttribute('data-name', exerciseName);
+
+  for(i = 0; i< 3; i++){ //create set 1-3
+
+  }
+  const label = document.createElement('label');
+  label.textContent = 'Set' ;
+  label.classList.add('setsLabel');
+
+  wrapper.appendChild(div);
+  wrapper.appendChild(label);
+  resistanceFields.appendChild(wrapper);
   }
 
   // Hide results when clicking outside
