refer to index instead of login

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,10 +10,10 @@
     <img id="menuBtn" src="images/menuButt.png" >
 
     <div id="menu" class="menuPopup">
-      <button id="mealTrackingBtn">Meal Tracking</button>
+      <button id="mealTrackingBtn">Track a Meal</button>
       <button id="trackAWorkoutBtn">Track a Workout</button>
       <button id="communityPageBtn">Community Page</button>
-      <button id="createAPostBtn">Createa a Post</button>
+      <button id="createAPostBtn">Create a Post</button>
     </div>
 	</body>
 	<script>
