removed css code for navbar, imported same code from sharedStyle.css file

--- a/mealTracking.html
+++ b/mealTracking.html
@@ -42,10 +42,12 @@
 			</div>
 			<div class="side-panel">
 				<div class="side-panel-item progress-circle-container">
+					<!-- progress circle UI component -->
 					<svg width="250" height="250" viewBox="0 0 250 250" class="circular-progress" style="--progress: 75">
 						<circle class="bg"></circle>
 						<circle class="fg"></circle>
 					</svg>
+
 					<div class="circular-progress-toggle-bar">
 						<div class="toggle-bar-item toggle-bar-item-calories selected">calories</div>
 						<div class="toggle-bar-item toggle-bar-item-fat">fat</div>
@@ -53,6 +55,7 @@
 						<div class="toggle-bar-item toggle-bar-item-carbs">carbs</div>
 					</div>
 				</div>
+
 				<div class="side-panel-item btn set-goal-btn">
 					set-goal-btn <br />
 					(to be implemented)
