removed menubutton, updated workout tracking

--- a/workout.html
+++ b/workout.html
@@ -42,24 +42,9 @@
                 id="reps"
                 placeholder="reps"
             > -->
-        </div>
-        <!-- <div class="setsLine"> -->
-            <!-- <input
-                type="text"
-                id="reps"
-                placeholder="reps"
-            > -->
 
-        <!-- </div> -->
-        
-
-
-        <!-- <div class="submitBtn">
-            submit
-
-        </div> -->
         <button class="submitBtn" onclick="window.location.href='dashboard.html'">submit</button>
-        <img class="menuBtn" src="images/MenuButtLabelled.png" >
+        <!-- <img class="menuBtn" src="images/MenuButtLabelled.png" > -->
         <script id="exerciseData" type="application/json">
         {
             "exercises": [
@@ -198,11 +183,25 @@ if (exerciseType.toLowerCase().includes('resistance')) {
   } else if (exerciseType.toLowerCase().includes('cardio')) {
     // For cardiovascular exercises
     const labels = ['Duration', 'Time', 'Avg Speed'];
+    // const cardioData = documnet.createElement('div'); //div for all cardio data
     labels.forEach(labelText => {
-      const label = document.createElement('div');
+        const dataWrapper = document.createElement('div'); //div for each row
+        dataWrapper.classList.add('dataWrapper');
+
+      const label = document.createElement('label'); //label inside each row 
       label.classList.add('cardioLabel');
       label.textContent = labelText;
-      labelsContainer.appendChild(label);
+
+      const cardioInput = document.createElement('input'); //input inside each row
+      cardioInput.classList.add('cardioInput');
+      cardioInput.type = 'number';
+      cardioInput.min = 0;
+      cardioInput.placeholder = 'enter value';
+
+      dataWrapper.appendChild(label);
+      dataWrapper.appendChild(cardioInput);
+
+      labelsContainer.appendChild(dataWrapper);
     });
   }
 
