cardio label change

--- a/workout.html
+++ b/workout.html
@@ -182,7 +182,7 @@ if (exerciseType.toLowerCase().includes('resistance')) {
   }
   } else if (exerciseType.toLowerCase().includes('cardio')) {
     // For cardiovascular exercises
-    const labels = ['Duration', 'Time', 'Avg Speed'];
+    const labels = ['Distance', 'Time', 'Avg Speed'];
     // const cardioData = documnet.createElement('div'); //div for all cardio data
     labels.forEach(labelText => {
         const dataWrapper = document.createElement('div'); //div for each row
