add add food button

--- a/mealTracking.html
+++ b/mealTracking.html
@@ -86,8 +86,11 @@
 									<span class="material-symbols-outlined btn food-item-delete-btn"> close </span>
 								</li>
 							</ul>
+							<div class="food-list-add-food-btn-container">
+								<span class="material-symbols-outlined add-food-btn"> add_2 </span>
+								<span class="add-food-btn-text">Add Food</span>
+							</div>
 						</div>
-						<ul class="food-list"></ul>
 					</div>
 					<div class="meal meal-lunch">
 						<div class="meal-section meal-section-header">
@@ -135,8 +138,11 @@
 									<span class="material-symbols-outlined btn food-item-delete-btn"> close </span>
 								</li>
 							</ul>
+							<div class="food-list-add-food-btn-container">
+								<span class="material-symbols-outlined add-food-btn"> add_2 </span>
+								<span class="add-food-btn-text">Add Food</span>
+							</div>
 						</div>
-						<ul class="food-list"></ul>
 					</div>
 					<div class="meal meal-dinner">
 						<div class="meal-section meal-section-header">
@@ -184,8 +190,11 @@
 									<span class="material-symbols-outlined btn food-item-delete-btn"> close </span>
 								</li>
 							</ul>
+							<div class="food-list-add-food-btn-container">
+								<span class="material-symbols-outlined add-food-btn"> add_2 </span>
+								<span class="add-food-btn-text">Add Food</span>
+							</div>
 						</div>
-						<ul class="food-list"></ul>
 					</div>
 					<div class="meal meal-snacks">
 						<div class="meal-section meal-section-header">
@@ -233,8 +242,11 @@
 									<span class="material-symbols-outlined btn food-item-delete-btn"> close </span>
 								</li>
 							</ul>
+							<div class="food-list-add-food-btn-container">
+								<span class="material-symbols-outlined add-food-btn"> add_2 </span>
+								<span class="add-food-btn-text">Add Food</span>
+							</div>
 						</div>
-						<ul class="food-list"></ul>
 					</div>
 				</div>
 			</div>
