--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="./css/mealTracking.css" />
 		<link rel="stylesheet" href="./css/palette.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
-    <link rel="stylesheet" href="./css/dashboardStyle.css"
+    <link rel="stylesheet" href="./css/dashboardStyle.css" />
 	</head>
 	<body>
 		<!-- topBar -->
