making the nav bar work

--- a/mealTracking-setGoal.html
+++ b/mealTracking-setGoal.html
@@ -73,4 +73,21 @@
 			</div>
 		</div>
 	</body>
+  <script>
+    document.getElementById("mealTrackingBtn").addEventListener("click", () => {
+      window.location.href = "mealTracking.html";
+    });
+
+    document.getElementById("trackAWorkoutBtn").addEventListener("click", () => {
+      window.location.href = "workout.html";
+    });
+
+    document.getElementById("communityPageBtn").addEventListener("click", () => {
+      //window.location.href = "";
+    });
+
+    document.getElementById("createAPostBtn").addEventListener("click", () => {
+      //window.location.href = "";
+    });
+  </script>
 </html>
