--- a/mealTracking.html
+++ b/mealTracking.html
@@ -285,4 +285,21 @@
 		<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 		<script src="./js/mealTracking.js"></script>
 	</body>
+  <script>
+    document.getElementById("mealTrackingBtn").addEventListener("click", () => {
+      window.location.href = "mealTracking.html";
+    });
+
+    document.getElementById("trackAWorkoutBtn").addEventListener("click", () => {
+      window.location.href = "workout.html";
+    });
+
+    document.getElementById("communityPageBtn").addEventListener("click", () => {
+      //window.location.href = "";
+    });
+
+    document.getElementById("createAPostBtn").addEventListener("click", () => {
+      //window.location.href = "";
+    });
+  </script>
 </html>
