--- a/workout.html
+++ b/workout.html
@@ -225,6 +225,23 @@ if (exerciseType.toLowerCase().includes('resistance')) {
       exerciseSearch.style.display = 'none';
     }
   });
+
+  document.getElementById("mealTrackingBtn").addEventListener("click", () => {
+    window.location.href = "mealTracking.html";
+  });
+
+  document.getElementById("trackAWorkoutBtn").addEventListener("click", () => {
+    window.location.href = "workout.html";
+  });
+
+  document.getElementById("communityPageBtn").addEventListener("click", () => {
+    //window.location.href = "";
+  });
+
+  document.getElementById("createAPostBtn").addEventListener("click", () => {
+    //window.location.href = "";
+  });
+  
 </script>
 
 
