adding navbar on community page

--- a/community.html
+++ b/community.html
@@ -23,6 +23,13 @@
       </div>
     </header>
 
+    <div id="menu" class="navBar">
+      <button id="mealTrackingBtn">Track a Meal</button>
+      <button id="trackAWorkoutBtn">Track a Workout</button>
+      <button id="communityPageBtn">Community Page</button>
+      <button id="createAPostBtn">Create a Post</button>
+    </div>
+
     <main class="communityMain">
       <h2 class="pageTitle">Community</h2>
       <div class="communityContent"></div>
