--- a/community.html
+++ b/community.html
@@ -210,6 +210,22 @@ submit.addEventListener("click", () => {
 
   closeModal();
 });
+
+ document.getElementById("mealTrackingBtn").addEventListener("click", () => {
+    window.location.href = "mealTracking.html";
+  });
+
+  document.getElementById("trackAWorkoutBtn").addEventListener("click", () => {
+    window.location.href = "workout.html";
+  });
+
+  document.getElementById("communityPageBtn").addEventListener("click", () => {
+    window.location.href = "community.html";
+  });
+
+  document.getElementById("createAPostBtn").addEventListener("click", () => {
+    //window.location.href = "";
+  });
 </script>
 
 
