--- a/workout.html
+++ b/workout.html
@@ -235,11 +235,11 @@ if (exerciseType.toLowerCase().includes('resistance')) {
   });
 
   document.getElementById("communityPageBtn").addEventListener("click", () => {
-    //window.location.href = "";
+    window.location.href = "community.html";
   });
 
   document.getElementById("createAPostBtn").addEventListener("click", () => {
-    //window.location.href = "";
+    window.location.href = "community.html";
   });
   
 </script>
