--- a/mealTracking-addFood.html
+++ b/mealTracking-addFood.html
@@ -8,7 +8,7 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Material+Symbols+Outlined"
 			rel="stylesheet" />
 		<link rel="stylesheet" href="./css/mealTracking-addFood.css" />
-    <link rel="stylesheet" href="./css/sharedStyle.css" />
+		<link rel="stylesheet" href="./css/sharedStyle.css" />
 	</head>
 	<body>
 		<!-- topBar (taken from Yawen's code) -->
@@ -26,12 +26,13 @@
 			</div>
 		</header>
 
-    <div id="menu" class="navBar">
-      <button id="mealTrackingBtn">Track a Meal</button>
-      <button id="trackAWorkoutBtn">Track a Workout</button>
-      <button id="communityPageBtn">Community Page</button>
-      <button id="createAPostBtn">Create a Post</button>
-    </div>
+		<div class="navBar">
+			<a href="./dashboard.html" class="navbar-link">Dashboard</a>
+			<a href="./mealTracking.html" class="navbar-link selected">Track a Meal</a>
+			<a href="./workout.html" class="navbar-link">Track a Workout</a>
+			<a href="./community.html" class="navbar-link">Community Page</a>
+			<a href="./createPost.html" class="navbar-link">Create a Post</a>
+		</div>
 
 		<!-- main add food section -->
 		<h2 class="welcome-msg"><a href="/mealTracking.html" class="go-back-link">Track a Meal</a> > Add Food</h2>
