--- a/mealTracking.html
+++ b/mealTracking.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="./css/mealTracking.css" />
 		<link rel="stylesheet" href="./css/palette.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
-    <link rel="stylesheet" href="./css/sharedStyle.css" />
+		<link rel="stylesheet" href="./css/sharedStyle.css" />
 	</head>
 	<body>
 		<!-- topBar -->
@@ -27,12 +27,13 @@
 			</div>
 		</header>
 
-    <div id="menu" class="navBar">
-      <button id="mealTrackingBtn">Track a Meal</button>
-      <button id="trackAWorkoutBtn">Track a Workout</button>
-      <button id="communityPageBtn">Community Page</button>
-      <button id="createAPostBtn">Create a Post</button>
-    </div>
+		<div class="navBar">
+			<a href="./dashboard.html" class="navbar-link">Dashboard</a>
+			<a href="./mealTracking.html" class="navbar-link selected">Track a Meal</a>
+			<a href="./workout.html" class="navbar-link">Track a Workout</a>
+			<a href="./community.html" class="navbar-link">Community Page</a>
+			<a href="./createPost.html" class="navbar-link">Create a Post</a>
+		</div>
 
 		<!-- main mealTracking section -->
 		<h2 class="welcome-msg">Track a Meal</h2>
@@ -285,21 +286,4 @@
 		<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 		<script src="./js/mealTracking.js"></script>
 	</body>
-  <script>
-    document.getElementById("mealTrackingBtn").addEventListener("click", () => {
-      window.location.href = "mealTracking.html";
-    });
-
-    document.getElementById("trackAWorkoutBtn").addEventListener("click", () => {
-      window.location.href = "workout.html";
-    });
-
-    document.getElementById("communityPageBtn").addEventListener("click", () => {
-      //window.location.href = "";
-    });
-
-    document.getElementById("createAPostBtn").addEventListener("click", () => {
-      //window.location.href = "";
-    });
-  </script>
 </html>
