--- a/community.html
+++ b/community.html
@@ -23,12 +23,13 @@
       </div>
     </header>
 
-    <div id="menu" class="navBar">
-      <button id="mealTrackingBtn">Track a Meal</button>
-      <button id="trackAWorkoutBtn">Track a Workout</button>
-      <button id="communityPageBtn">Community Page</button>
-      <button id="createAPostBtn">Create a Post</button>
-    </div>
+    <div class="navBar">
+			<a href="./dashboard.html" class="navbar-link">Dashboard</a>
+			<a href="./mealTracking.html" class="navbar-link">Track a Meal</a>
+			<a href="./workout.html" class="navbar-link">Track a Workout</a>
+			<a href="./community.html" class="navbar-link selected">Community Page</a>
+			<a href="./createPost.html" class="navbar-link">Create a Post</a>
+		</div>
 
     <main class="communityMain">
       <h2 class="pageTitle">Community</h2>
@@ -211,21 +212,7 @@ submit.addEventListener("click", () => {
   closeModal();
 });
 
- document.getElementById("mealTrackingBtn").addEventListener("click", () => {
-    window.location.href = "mealTracking.html";
-  });
-
-  document.getElementById("trackAWorkoutBtn").addEventListener("click", () => {
-    window.location.href = "workout.html";
-  });
-
-  document.getElementById("communityPageBtn").addEventListener("click", () => {
-    window.location.href = "community.html";
-  });
-
-  document.getElementById("createAPostBtn").addEventListener("click", () => {
-    //window.location.href = "";
-  });
+ 
 </script>
 
 
