fixed broken links

--- a/community.html
+++ b/community.html
@@ -19,7 +19,7 @@
         <a href="dashboard.html" class="profileButt">
           <img src="images/userIcon.png" alt="Profile" />
         </a>
-        <button class="logoutButt" onclick="window.location.href='login.html'">Logout</button>
+        <button class="logoutButt" onclick="window.location.href='index.html'">Logout</button>
       </div>
     </header>
 
