--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,7 @@
 					<img src="images/userIcon.png" />
 				</a>
 				<!-- <a href="login.html" class="logoutButt">Logout</a> -->
-				<button class="logoutButt" onclick="window.location.href='login.html'">Logout</button>
+				<button class="logoutButt" onclick="window.location.href='index.html'">Logout</button>
 			</div>
 		</header>
 
