--- a/createPost.html
+++ b/createPost.html
@@ -8,6 +8,6 @@
 	<body>
 		<h1>Under Construction, come back later LOL</h1>
 
-		<h1><a href="/dashboard.html">Safe Exit</a></h1>
+		<h1><a href="dashboard.html">Safe Exit</a></h1>
 	</body>
 </html>
